# buffa-validate

./: Cargo.toml  README.md
.github/workflows/: ci.yml
buffa-validate/: Cargo.toml
buffa-validate-build/: Cargo.toml
buffa-validate-build/src/: lib.rs
buffa-validate-codegen/: Cargo.toml
buffa-validate-codegen/src/: field.rs  lib.rs  message.rs  rules.rs  service.rs
buffa-validate-codegen/src/constraints/: any.rs  bool.rs  bytes.rs  cel.rs  duration.rs  enumeration.rs  map.rs  message.rs  mod.rs  numeric.rs  oneof.rs  repeated.rs  string.rs  timestamp.rs
buffa-validate/src/: connect.rs  helpers.rs  lib.rs  violation.rs
tests/e2e/: Cargo.toml  build.rs
tests/e2e/proto/: common.proto  test.proto
tests/e2e/src/: lib.rs
