[package]
name = "buffa-validate-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build-time integration for buffa-validate: generates validation companions as a post-pass"

[dependencies]
buffa = { workspace = true }
buffa-codegen = { workspace = true }
buffa-validate-codegen = { workspace = true }
anyhow = { workspace = true }

tempfile = { workspace = true }
