[package]
name = "buffa-validate-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Code generation for buffa-validate: reads protovalidate annotations, emits validation companion files"

[dependencies]
buffa = { workspace = true }
buffa-codegen = { workspace = true }
buffa-descriptor = { workspace = true }
anyhow = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
