[package]
name = "buffa-validate-e2e"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
buffa = { version = "0.6" }
buffa-types = { version = "0.6", features = ["json"] }
buffa-validate = { path = "../../buffa-validate", features = ["connectrpc"] }
connectrpc = { version = "0.6" }
http-body = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
buffa-validate-build = { path = "../../buffa-validate-build" }

[features]
default = []
